# SRA

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/sra/: cli.py  config.py  graph.py  llm.py  schemas.py  server.py  state.py  tools.py
src/sra/static/: index.html
